--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,10 @@ main:
     url: /
   - title: "About"
     url: /about/
+  - title: "Our Farm"
+    url: /our-farm/
   - title: "Contact"
     url: /contact/
+  
+
  
