--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >-
 twitter_username: 
 github_username: 
 minimal_mistakes_skin: mint
-search: true
+search: false
 
 # Build settings
 markdown: kramdown
