--- a/_config.yml
+++ b/_config.yml
@@ -67,13 +67,7 @@ author:
 
 # Footer links (displayed at the bottom of every page)
 footer:
-  links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope"
-      url: "mailto:mbcoffee@gmail.com"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/gedefaws"
+  
 
 # Page defaults
 defaults:
@@ -95,7 +89,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       css: /assets/css/main.scss
 
 # Blog archive pages — okay to keep, even if not used yet
